<resources>
    <string name="app_name">SafeKey</string>
    <string name="txt_ingrese_pin">INGRESE PIN</string>
    <string name="txt_1">1</string>
    <string name="txt_2">2</string>
    <string name="txt_3">3</string>
    <string name="txt_4">4</string>
    <string name="txt_5">5</string>
    <string name="txt_6">6</string>
    <string name="txt_7">7</string>
    <string name="txt_8">8</string>
    <string name="txt_9">9</string>
    <string name="txt_0">0</string>
    <string name="txt_cambiar_a_login_con_password">Cambiar a login con correo y contreaseña, ¡Pulse aquí!</string>
    <string name="txt_registro_completado">Registro completado</string>
    <string name="txt_confirme_pin">Confirme PIN</string>
    <string name="txt_ingrese_un_pin">Ingrese un PIN</string>
    <string name="txt_ingrese_un_pin_a">Ingrese un PIN:</string>
    <string name="txt_reingrese_password">Reingrese Contraseña</string>
    <string name="txt_ingrese_una_password">Ingrese una contraseña</string>
    <string name="txt_tu_correo">Tu correo</string>
    <string name="txt_tu_nombre">Tu Nombre</string>
    <string name="txt_registro_inicial">Registro Inicial</string>
    <string name="txt_ingreso_con_credenciales">Ingreso con credenciales</string>
    <string name="txt_ingresar">Ingresar</string>
    <string name="txt_contrase_a">Contraseña</string>
    <string name="txt_cerrar_sesi_n">Cerrar Sesión</string>
    <string name="txt_mis_datos">Mis Datos</string>
    <string name="txt_respaldar">Respaldar</string>
    <string name="txt_agregar_ncontrase_a">Agregar \ncontraseña</string>
    <string name="txt_actualizar_datos">Actualizar Datos</string>
    <string name="txt_actualizacion_exitosa">Actualización Exitosa</string>
    <string name="txt_listo">Listo</string>
    <string name="txt_eliminar_cuenta">Eliminar Cuenta</string>
    <string name="txt_mis_contrase_as">Mis Contraseñas</string>
    <string name="txttitulo">Titulo</string>
    <string name="txt_software">Software</string>
    <string name="txt_buscar">Buscar contraseña</string>
    <string name="txt_titulo_page_clave">Nueva Clave</string>
    <string name="txt_comentarios">Comentarios</string>
    <string name="txt_soso">Sitio web o software (opcional)</string>
    <string name="txt_comentarios_opcional">Comentarios (opcional)</string>
    <string name="txt_ver_contenido">Ver contenido</string>
    <string name="txt_no_recuerda_sus_credenciales">¿No recuerda sus credenciales?, ¡Pulse aquí!</string>
    <string name="txt_reestaurar_contrase_a">Restaurar contraseña</string>
    <string name="txt_recuperar_credenciales">Recuperar credenciales</string>
    <string name="txt_des_codigo">(*) Ingrese aquí el codigo que envio a su correo en el momento del registro.</string>
    <string name="txt_codigo">Codigo</string>
    <string name="txt_carga_de_datos_respaldados">Cargar datos de respaldado</string>
    <string name="txt_cargar_datos">Cargar datos</string>
    <string name="txt_pegue_los_datos_aqu">Pegue los datos aquí</string>
    <string name="txt_descripcion_carga">Para esta operación requiere al menos una de sus claves y texto COMPLETO del respaldo enviado a su correo</string>
</resources>
