<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B3E4B"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/etTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:text="@string/txt_ingrese_pin"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBorrar" />

    <Button
        android:id="@+id/btnUno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/txt_1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitulo" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/txt_2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnUno"
        app:layout_constraintTop_toBottomOf="@+id/etTitulo" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/txt_3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnDos"
        app:layout_constraintTop_toBottomOf="@+id/etTitulo" />

    <Button
        android:id="@+id/btnCuatro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/txt_4"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUno" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/txt_5"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnCuatro"
        app:layout_constraintTop_toBottomOf="@+id/btnDos" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/txt_6"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnCinco"
        app:layout_constraintTop_toBottomOf="@+id/btnTres" />

    <Button
        android:id="@+id/btnSiete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/txt_7"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCuatro" />

    <Button
        android:id="@+id/btnOcho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/txt_8"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnSiete"
        app:layout_constraintTop_toBottomOf="@+id/btnCinco" />

    <Button
        android:id="@+id/btnNueve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/txt_9"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btnOcho"
        app:layout_constraintTop_toBottomOf="@+id/btnSeis" />

    <Button
        android:id="@+id/btnCero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/txt_0"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOcho" />

    <TextView
        android:id="@+id/tvPin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:maxLength="4"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/btnBorrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorAccent"
        android:text="del."
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLinkLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:text="@string/txt_cambiar_a_login_con_password"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCero" />

    <TextView
        android:id="@+id/tvLinkRecuperar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:fontFamily="@font/ubuntu_light"
        android:gravity="center"
        android:text="@string/txt_no_recuerda_sus_credenciales"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLinkLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>